arrumando erro e criando pagina inicial

--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Labirinto ADM</title>
-    <link rel="stylesheet" href="css/styleGame.css">
+    <title>Tela Inicial</title>
+    <link rel="stylesheet" href="css/index.css">
+
 </head>
 <body>
-<canvas class="telaJogo" width="640" height="640" style="border: solid;"></canvas>
-<div id="modalPopUpPergunta">
-    <h3>Isso nada mais é que um teste</h3>
-    <span id="close" onclick="fecharModal()">Fechar Modal</span>
-</div>
-<script src="js/script.js"></script>
-
+    <a href='game.html' class="botaoComecar">
+        <img src="./img/espada.png">
+        <span>JOGAR</span>
+    </a>
+    <div class="botaoDev"></div>
 </body>
 </html>
