--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styleGame.css">
 </head>
 <body>
-<canvas class="telaJogo" width="640" height="640" style="border: solid;"></canvas>
+<canvas class="telaJogo" width="640" height="640"></canvas>
 <div id="modalPopUpPergunta">
     <h3>Isso nada mais é que um teste</h3>
     <span id="close" onclick="fecharModal()">Fechar Modal</span>
