--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 
 </head>
 <body>
-    <a href='game.html' class="botaoComecar">
+    <img id="tituloJogo" src="./img/tituloJogo.png">
+    <a href='game.html' class="botoes">
         <img src="./img/espada.png">
         <span>JOGAR</span>
     </a>
-    <div class="botaoDev"></div>
+    <div class="botoes">
+        <img src="./img/espada.png">
+        <span>SOBRE</span>
+    </div>
 </body>
 </html>
