--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
 </head>
 <body>
-    <img id="tituloJogo" src="./img/tituloJogo.png">
-    <a href='game.html' class="botoes">
+    <a href='game.html' class="botaoComecar">
         <img src="./img/espada.png">
         <span>JOGAR</span>
     </a>
-    <div class="botoes">
+    <a href='sobre.html' class="botaoSobre">
         <img src="./img/espada.png">
         <span>SOBRE</span>
-    </div>
+    </a>
+    <div class="botaoDev"></div>
 </body>
 </html>
