--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
 </head>
 <body>
-    <a href='game.html' class="botaoComecar">
+    <img id="tituloJogo" src="./img/tituloJogo.png">
+    <a href='game.html' class="botoes">
         <img src="./img/espada.png">
         <span>JOGAR</span>
     </a>
-    <a href='sobre.html' class="botaoSobre">
+    <a href="sobre.html" class="botoes">
         <img src="./img/espada.png">
         <span>SOBRE</span>
     </a>
-    <div class="botaoDev"></div>
 </body>
 </html>
