--- a/jp.html
+++ b/jp.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre</title>
+    <title>João Pedro</title>
     <style>
         body {
             background-image: url("../img/wallpaper_inicio.jpg");
@@ -30,6 +30,7 @@
             text-align: center;
         }
 
+
         h1 {
             font-size: 24px;
             margin-top: 0;
@@ -40,7 +41,6 @@
             display: block;
             margin: 10px 0;
             color: #333;
-            /* Cor do texto */
             text-decoration: none;
         }
 
@@ -88,16 +88,8 @@
 
 <body>
     <div class="container">
-        <h1>Maze Runner</h1>
-        <h3>O "Labirinto de Administração" é o emocionante projeto final da disciplina de Introdução à Administração. Trata-se de um jogo de labirinto que combina diversão e aprendizado, 
-            pois desafia os jogadores com perguntas de administração de diferentes níveis de dificuldade. Com o uso das tecnologias HTML5 e JavaScript, este jogo oferece uma experiência interativa envolvente. 
-            Os jogadores devem guiar seu personagem através do intricado labirinto, respondendo às perguntas corretamente para avançar. Uma oportunidade única de testar suas habilidades de 
-            administração enquanto se divertem!</h3>
-        <h1>Desenvolvedores</h1>
-        <a href="/bruno.html"> <strong>Bruno Gomes Pereira</strong></a>
-        <a href="/eduardo.html"> <strong>Eduardo Fidelis de Medeiros</strong></a>
-        <a href="/jp.html"> <strong>João Pedro Araujo Queiroz Barbosa</strong></a>
-        <a href="/otavio.html"> <strong>Otavio Cardoso</strong></a>
+        <h1>João Pedro Araujo Queiroz Barbosa</h1>
+        <h3>Texto sobre João Pedro Araujo</h3>
     </div>
     <a href='index.html' class="botaoMenu">
         <span>Menu principal</span></a>
