--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
 <body>
 <canvas class="telaJogo" width="640" height="640"></canvas>
 <div id="modalPopUpPergunta">
-    <h3 class="pergunta"></h3>
+    <div class="pergunta"></div>
     <span id="close" onclick="fecharModal()">Fechar Modal</span>
 </div>
 <script src="js/script.js"></script>
