--- a/jp.html
+++ b/jp.html
@@ -89,6 +89,7 @@
 <body>
     <div class="container">
         <h1>João Pedro Araujo Queiroz Barbosa</h1>
+        <img src="img/jp.jpg" width="320" height="205" />
         <h3>Texto sobre João Pedro Araujo</h3>
     </div>
     <a href='index.html' class="botaoMenu">
