Criação de esqueleto para adição da página sobre

--- a/jp.html
+++ b/jp.html
@@ -90,7 +90,9 @@
     <div class="container">
         <h1>João Pedro Araujo Queiroz Barbosa</h1>
         <img src="img/jp.jpg" width="320" height="205" />
-        <h3>Texto sobre João Pedro Araujo</h3>
+        <a>Joao Pedro Araujo Queiroz Barbosa, possui formaçâo em T.I, pelo IFTM campus Ituiutaba
+            e atualmente (2023) esta cursando o 4° período de ciencia da computção pelo IFTM campus
+            Ituiutaba, com previsao de finalização em 2025</a>
     </div>
     <a href='index.html' class="botaoMenu">
         <span>Menu principal</span></a>
