--- a/bruno.html
+++ b/bruno.html
@@ -1,11 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bruno Gomes</title>
+    <style>
+        body {
+            background-image: url("../img/wallpaper_inicio.jpg");
+            padding: 0;
+            margin: 0;
+            width: 100vw;
+            height: 100vh;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .container {
+            max-width: 600px;
+            padding: 20px;
+            background-color: #f1f1f19d;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
+        }
+
+
+        h1 {
+            font-size: 24px;
+            margin-top: 0;
+        }
+
+        a {
+            font-size: 16px;
+            display: block;
+            margin: 10px 0;
+            color: #333;
+            text-decoration: none;
+        }
+
+        a#homePgBtn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            margin: 20px;
+            transition: background-color 0.3s;
+        }
+
+        a#homePgBtn:hover {
+            background-color: #0056b3;
+        }
+
+        .botaoMenu {
+            width: 20vw;
+            height: 50px;
+            background-color: azure;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            border-radius: 10px;
+            border: 3px solid rgb(117, 117, 117);
+            padding: 0;
+            text-decoration: none;
+            color: black;
+        }
+
+        .botaoMenu img {
+            width: 40px;
+        }
+
+        .botaoMenu span {
+            width: 100%;
+            text-align: center;
+            font-size: 1.5em;
+        }
+    </style>
 </head>
+
 <body>
-    <a>Bruno</a>
+    <div class="container">
+        <!-- <h1>Coloque aqui seu nome</h1> -->
+        <!-- <img src="img/[coloque aqui o seu referencial de imagem].jpg" width="320" height="205" /> -->
+        <!-- <a>Coloque aqui sua descrição pessoal</a> -->
+    </div>
+    <a href='index.html' class="botaoMenu">
+        <span>Menu principal</span></a>
 </body>
+
 </html>
