--- a/game.html
+++ b/game.html
@@ -11,6 +11,9 @@
 <div id="modalPopUpPergunta">
     <div class="pergunta"></div>
 </div>
+<div class="modalPerdeu">
+    
+</div>
 <script src="js/script.js"></script>
 
 </body>
