--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela Inicial</title>
     <link rel="stylesheet" href="css/index.css">
-
+    <style>
+        
+    body {
+        background-image: url("../img/wallpaper_inicio.jpg");
+        padding: 0;
+        margin: 0;
+        width: 100vw;
+        height: 100vh;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-family: Ethno;
+    }
+    </style>
 </head>
 <body>
     <img id="tituloJogo" src="./img/tituloJogo.png">
